News UAT/force-app/main/default/objects/Account__x/fields/Most_Recent_Activity_c__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Activity_c__c</fullName>
    <externalDeveloperName>Most_Recent_Activity__c</externalDeveloperName>
    <label>Most Recent Activity</label>
    <type>Date</type>
</CustomField>