News UAT/force-app/main/default/objects/Account__x/fields/My_Companies_c__c.field-meta.xml
<CustomField>
    <fullName>My_Companies_c__c</fullName>
    <externalDeveloperName>My_Companies__c</externalDeveloperName>
    <label>My Companies</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>