News UAT/force-app/main/default/objects/Account__x/fields/My_Specialist_Media_Account_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>My_Specialist_Media_Account_Manager_c__c</fullName>
    <externalDeveloperName>My_Specialist_Media_Account_Manager__c</externalDeveloperName>
    <label>My Specialist Media Account Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>