News UAT/force-app/main/default/objects/Account__x/fields/Newsagency_Categories_c__c.field-meta.xml
<CustomField>
    <fullName>Newsagency_Categories_c__c</fullName>
    <externalDeveloperName>Newsagency_Categories__c</externalDeveloperName>
    <label>Newsagency Categories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Newsagent</fullName>
            </value>
            <value>
                <fullName>NIE</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>