News UAT/force-app/main/default/objects/Account__x/fields/NewsAgent_Type_c__c.field-meta.xml
<CustomField>
    <fullName>NewsAgent_Type_c__c</fullName>
    <externalDeveloperName>NewsAgent_Type__c</externalDeveloperName>
    <label>NewsAgent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master Agent</fullName>
            </value>
            <value>
                <fullName>Sub Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>