News UAT/force-app/main/default/objects/Account__x/fields/Newspaper_Drop_off_Point_c__c.field-meta.xml
<CustomField>
    <fullName>Newspaper_Drop_off_Point_c__c</fullName>
    <externalDeveloperName>Newspaper_Drop_off_Point__c</externalDeveloperName>
    <label>Newspaper Drop off Point</label>
    <type>TextArea</type>
</CustomField>