News UAT/force-app/main/default/objects/Account__x/fields/Next_Anniversary_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Anniversary_c__c</fullName>
    <externalDeveloperName>Next_Anniversary__c</externalDeveloperName>
    <label>Next Anniversary</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>