News UAT/force-app/main/default/objects/Account__x/fields/Nugget_c__c.field-meta.xml
<CustomField>
    <fullName>Nugget_c__c</fullName>
    <externalDeveloperName>Nugget__c</externalDeveloperName>
    <label>Nugget</label>
    <type>TextArea</type>
</CustomField>