News UAT/force-app/main/default/objects/Account__x/fields/Number_of_Contacts_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contacts_c__c</fullName>
    <externalDeveloperName>Number_of_Contacts__c</externalDeveloperName>
    <label>Number of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>