News UAT/force-app/main/default/objects/Account__x/fields/NZ_Lapsed_or_Active_c__c.field-meta.xml
<CustomField>
    <fullName>NZ_Lapsed_or_Active_c__c</fullName>
    <externalDeveloperName>NZ_Lapsed_or_Active__c</externalDeveloperName>
    <label>NZ Lapsed or Active</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>