News UAT/force-app/main/default/objects/Account__x/fields/NZMAG_Account_ID_salesforce_c__c.field-meta.xml
<CustomField>
    <fullName>NZMAG_Account_ID_salesforce_c__c</fullName>
    <externalDeveloperName>NZMAG_Account_ID_salesforce__c</externalDeveloperName>
    <label>NZMAG Account ID(salesforce)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>