News UAT/force-app/main/default/objects/Account__x/fields/Online_Revenue_LY_TEST_c__c.field-meta.xml
<CustomField>
    <fullName>Online_Revenue_LY_TEST_c__c</fullName>
    <externalDeveloperName>Online_Revenue_LY_TEST__c</externalDeveloperName>
    <label>Online Revenue LY (TEST)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>