News UAT/force-app/main/default/objects/Account__x/fields/Online_Sales_Revenue_LYTD_c__c.field-meta.xml
<CustomField>
    <fullName>Online_Sales_Revenue_LYTD_c__c</fullName>
    <externalDeveloperName>Online_Sales_Revenue_LYTD__c</externalDeveloperName>
    <label>Online Sales Revenue LYTD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>