News UAT/force-app/main/default/objects/Account__x/fields/Other_inserts_revenue_LYTD_c__c.field-meta.xml
<CustomField>
    <fullName>Other_inserts_revenue_LYTD_c__c</fullName>
    <externalDeveloperName>Other_inserts_revenue_LYTD__c</externalDeveloperName>
    <label>Inserts LYTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>