News UAT/force-app/main/default/objects/Account__x/fields/Other_Revenue_YTD_TEST_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Revenue_YTD_TEST_c__c</fullName>
    <externalDeveloperName>Other_Revenue_YTD_TEST__c</externalDeveloperName>
    <label>Other Revenue YTD (TEST)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>