News UAT/force-app/main/default/objects/Account__x/fields/Other_sales_revenue_YTD_c__c.field-meta.xml
<CustomField>
    <fullName>Other_sales_revenue_YTD_c__c</fullName>
    <externalDeveloperName>Other_sales_revenue_YTD__c</externalDeveloperName>
    <label>Other Revenue YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>