News UAT/force-app/main/default/objects/Account__x/fields/Other_Street_Type_if_Applicable_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Street_Type_if_Applicable_c__c</fullName>
    <externalDeveloperName>Other_Street_Type_if_Applicable__c</externalDeveloperName>
    <label>Other Street Type (if Applicable)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>