News UAT/force-app/main/default/objects/Account__x/fields/Owner_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email_c__c</fullName>
    <externalDeveloperName>Owner_Email__c</externalDeveloperName>
    <label>Owner Email</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>