News UAT/force-app/main/default/objects/Account__x/fields/Owner_Last_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Owner_Last_Name_c__c</fullName>
    <externalDeveloperName>Owner_Last_Name__c</externalDeveloperName>
    <label>Owner Last Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>