News UAT/force-app/main/default/objects/Account__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>Primary Account Manager</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies3</relationshipName>
    <type>ExternalLookup</type>
</CustomField>