News UAT/force-app/main/default/objects/Account__x/fields/PAM_Activity_This_APN_Month_c__c.field-meta.xml
<CustomField>
    <fullName>PAM_Activity_This_APN_Month_c__c</fullName>
    <externalDeveloperName>PAM_Activity_This_APN_Month__c</externalDeveloperName>
    <label>PAM Activity This APN Month</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>