News UAT/force-app/main/default/objects/Account__x/fields/PAM_Last_Activity_Dt_c__c.field-meta.xml
<CustomField>
    <fullName>PAM_Last_Activity_Dt_c__c</fullName>
    <externalDeveloperName>PAM_Last_Activity_Dt__c</externalDeveloperName>
    <label>PAM Last Activity Date</label>
    <type>DateTime</type>
</CustomField>