News UAT/force-app/main/default/objects/Account__x/fields/PAM_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>PAM_Manager_c__c</fullName>
    <externalDeveloperName>PAM_Manager__c</externalDeveloperName>
    <label>PAM Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>