News UAT/force-app/main/default/objects/Account__x/fields/PAM_Managers_Email_c__c.field-meta.xml
<CustomField>
    <fullName>PAM_Managers_Email_c__c</fullName>
    <externalDeveloperName>PAM_Managers_Email__c</externalDeveloperName>
    <label>PAM Managers Email</label>
    <type>Email</type>
</CustomField>