News UAT/force-app/main/default/objects/Account__x/fields/Parent_account_type_c__c.field-meta.xml
<CustomField>
    <fullName>Parent_account_type_c__c</fullName>
    <externalDeveloperName>Parent_account_type__c</externalDeveloperName>
    <label>Parent Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>