News UAT/force-app/main/default/objects/Account__x/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <externalDeveloperName>ParentId</externalDeveloperName>
    <label>Parent Company</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies5</relationshipName>
    <type>ExternalLookup</type>
</CustomField>