News UAT/force-app/main/default/objects/Account__x/fields/Postal_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_c__c</fullName>
    <externalDeveloperName>Postal_Code__c</externalDeveloperName>
    <label>Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>