News UAT/force-app/main/default/objects/Account__x/fields/Postcode_c__c.field-meta.xml
<CustomField>
    <fullName>Postcode_c__c</fullName>
    <externalDeveloperName>Postcode__c</externalDeveloperName>
    <label>Postcode</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>