News UAT/force-app/main/default/objects/Account__x/fields/Previous_PAM_c__c.field-meta.xml
<CustomField>
    <fullName>Previous_PAM_c__c</fullName>
    <externalDeveloperName>Previous_PAM__c</externalDeveloperName>
    <label>Previous PAM</label>
    <length>45</length>
    <type>Text</type>
</CustomField>