News UAT/force-app/main/default/objects/Account__x/fields/Previous_PAM_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Previous_PAM_Email_c__c</fullName>
    <externalDeveloperName>Previous_PAM_Email__c</externalDeveloperName>
    <label>Previous PAM Email</label>
    <type>Email</type>
</CustomField>