News UAT/force-app/main/default/objects/Account__x/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <externalDeveloperName>Rating</externalDeveloperName>
    <label>Company Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Sustain</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>