News UAT/force-app/main/default/objects/Account__x/fields/Reason_for_PAM_Change_Rep_View_c__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_PAM_Change_Rep_View_c__c</fullName>
    <externalDeveloperName>Reason_for_PAM_Change_Rep_View__c</externalDeveloperName>
    <label>Reason for PAM Change</label>
    <type>TextArea</type>
</CustomField>