News UAT/force-app/main/default/objects/Account__x/fields/Reason_To_Close_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Reason_To_Close_Account_c__c</fullName>
    <externalDeveloperName>Reason_To_Close_Account__c</externalDeveloperName>
    <label>Reason To Close Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Account</fullName>
            </value>
            <value>
                <fullName>Business Closed Down</fullName>
            </value>
            <value>
                <fullName>Lapsed Advertiser</fullName>
            </value>
            <value>
                <fullName>Business Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>