News UAT/force-app/main/default/objects/Account__x/fields/Record_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_c__c</fullName>
    <externalDeveloperName>Record_Type__c</externalDeveloperName>
    <label>Record Type</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>