News UAT/force-app/main/default/objects/Account__x/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <externalDeveloperName>RecordTypeId</externalDeveloperName>
    <label>Company Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>