News UAT/force-app/main/default/objects/Account__x/fields/Region_c__c.field-meta.xml
<CustomField>
    <fullName>Region_c__c</fullName>
    <externalDeveloperName>Region__c</externalDeveloperName>
    <label>Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>