News UAT/force-app/main/default/objects/Account__x/fields/Request_Change_of_Account_Manager_NZ_c__c.field-meta.xml
<CustomField>
    <fullName>Request_Change_of_Account_Manager_NZ_c__c</fullName>
    <externalDeveloperName>Request_Change_of_Account_Manager_NZ__c</externalDeveloperName>
    <label>Request Change of Account Manager NZ</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies6</relationshipName>
    <type>ExternalLookup</type>
</CustomField>