News UAT/force-app/main/default/objects/Account__x/fields/Request_Listening_Report_c__c.field-meta.xml
<CustomField>
    <fullName>Request_Listening_Report_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Request_Listening_Report__c</externalDeveloperName>
    <label>Request Listening Report</label>
    <type>Checkbox</type>
</CustomField>