News UAT/force-app/main/default/objects/Account__x/fields/Request_PAM_Change_Manager_View_c__c.field-meta.xml
<CustomField>
    <fullName>Request_PAM_Change_Manager_View_c__c</fullName>
    <externalDeveloperName>Request_PAM_Change_Manager_View__c</externalDeveloperName>
    <label>Request PAM Change to</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies8</relationshipName>
    <type>ExternalLookup</type>
</CustomField>