News UAT/force-app/main/default/objects/Account__x/fields/Request_to_Close_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Close_Account_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Request_to_Close_Account__c</externalDeveloperName>
    <label>Request to Close Account</label>
    <type>Checkbox</type>
</CustomField>