News UAT/force-app/main/default/objects/Account__x/fields/Request_to_Delete_Lead_c__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Delete_Lead_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Request_to_Delete_Lead__c</externalDeveloperName>
    <label>Request to Delete Lead</label>
    <type>Checkbox</type>
</CustomField>