News UAT/force-app/main/default/objects/Account__x/fields/Request_to_Update_Company_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Update_Company_Email_Address__c</fullName>
    <externalDeveloperName>Request_to_Update_Company_Email_Address__c</externalDeveloperName>
    <label>Change Company Email</label>
    <type>Email</type>
</CustomField>