News UAT/force-app/main/default/objects/Account__x/fields/Request_to_Update_Office_Phone_Number_to__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Update_Office_Phone_Number_to__c</fullName>
    <externalDeveloperName>Request_to_Update_Office_Phone_Number_to__c</externalDeveloperName>
    <label>Change Office Phone</label>
    <type>Phone</type>
</CustomField>