News UAT/force-app/main/default/objects/Account__x/fields/Retained_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Retained_Account_c__c</fullName>
    <externalDeveloperName>Retained_Account__c</externalDeveloperName>
    <label>Retained Account Name</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies6</relationshipName>
    <type>ExternalLookup</type>
</CustomField>