News UAT/force-app/main/default/objects/Account__x/fields/Retained_Account_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Retained_Account_ID_c__c</fullName>
    <externalDeveloperName>Retained_Account_ID__c</externalDeveloperName>
    <label>Retained Account ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>