News UAT/force-app/main/default/objects/Account__x/fields/Retrospectively_Trigger_Workflow_c__c.field-meta.xml
<CustomField>
    <fullName>Retrospectively_Trigger_Workflow_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Retrospectively_Trigger_Workflow__c</externalDeveloperName>
    <label>Retrospectively Trigger Workflow</label>
    <type>Checkbox</type>
</CustomField>