News UAT/force-app/main/default/objects/Account__x/fields/Rev_YTD_vs_LYTD_c__c.field-meta.xml
<CustomField>
    <fullName>Rev_YTD_vs_LYTD_c__c</fullName>
    <externalDeveloperName>Rev_YTD_vs_LYTD__c</externalDeveloperName>
    <label>Rev +/- YTD vs LYTD</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>