News UAT/force-app/main/default/objects/Account__x/fields/Revenue_This_Month_TEST_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_This_Month_TEST_c__c</fullName>
    <externalDeveloperName>Revenue_This_Month_TEST__c</externalDeveloperName>
    <label>Revenue This Month (TEST)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>