News UAT/force-app/main/default/objects/Account__x/fields/ROP_Online_LYTD_c__c.field-meta.xml
<CustomField>
    <fullName>ROP_Online_LYTD_c__c</fullName>
    <externalDeveloperName>ROP_Online_LYTD__c</externalDeveloperName>
    <label>ROP + Online &gt; LYTD</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>