News UAT/force-app/main/default/objects/Account__x/fields/ROP_Rev_YTD_vs_LYTD_TEST_c__c.field-meta.xml
<CustomField>
    <fullName>ROP_Rev_YTD_vs_LYTD_TEST_c__c</fullName>
    <externalDeveloperName>ROP_Rev_YTD_vs_LYTD_TEST__c</externalDeveloperName>
    <label>ROP Rev +/- YTD vs LYTD (TEST)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>