News UAT/force-app/main/default/objects/Account__x/fields/ROP_Revenue_LY_TEST_c__c.field-meta.xml
<CustomField>
    <fullName>ROP_Revenue_LY_TEST_c__c</fullName>
    <externalDeveloperName>ROP_Revenue_LY_TEST__c</externalDeveloperName>
    <label>ROP Revenue LY (TEST)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>