News UAT/force-app/main/default/objects/Account__x/fields/ROP_sales_revenue_YTD_c__c.field-meta.xml
<CustomField>
    <fullName>ROP_sales_revenue_YTD_c__c</fullName>
    <externalDeveloperName>ROP_sales_revenue_YTD__c</externalDeveloperName>
    <label>ROP Revenue YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>