News UAT/force-app/main/default/objects/Account__x/fields/ROP_Spend_c__c.field-meta.xml
<CustomField>
    <fullName>ROP_Spend_c__c</fullName>
    <externalDeveloperName>ROP_Spend__c</externalDeveloperName>
    <label>ROP Spend</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>