News UAT/force-app/main/default/objects/Account__x/fields/ROPYTDLYTD_c__c.field-meta.xml
<CustomField>
    <fullName>ROPYTDLYTD_c__c</fullName>
    <externalDeveloperName>ROPYTDLYTD__c</externalDeveloperName>
    <label>ROP YTD-LYTD</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>