News UAT/force-app/main/default/objects/Account__x/fields/Sales_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_c__c</fullName>
    <externalDeveloperName>Sales_Channel__c</externalDeveloperName>
    <label>Sales Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>