News UAT/force-app/main/default/objects/Account__x/fields/Sales_Current_Month_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Current_Month_c__c</fullName>
    <externalDeveloperName>Sales_Current_Month__c</externalDeveloperName>
    <label>Sales Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>