News UAT/force-app/main/default/objects/Account__x/fields/Sales_Last_Year_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_Year_c__c</fullName>
    <externalDeveloperName>Sales_Last_Year__c</externalDeveloperName>
    <label>Revenue LY</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>