News UAT/force-app/main/default/objects/Account__x/fields/Sales_Last_YTD_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_YTD_c__c</fullName>
    <externalDeveloperName>Sales_Last_YTD__c</externalDeveloperName>
    <label>Revenue LYTD</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>